# PcPocket

./: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: create_linux_realeases.yml  create_releases.yml  multi_stage_docker_build.yml
scripts/: PcPocket
src/: App.css  interface.d.ts  main.tsx  routeTree.gen.ts  types.ts
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2025-04-01-204225_create_bookmarks/: down.sql  up.sql
src-tauri/src/: commands.rs  custom_parsers.rs  database_cmds.rs  lib.rs  logger.rs  main.rs  models.rs  parser_errors.rs  runtime.rs  schema.rs  setup.rs  structs.rs  tray.rs  utils.rs
src/components/: appSidebar.tsx  bookmarkForm.tsx  homeScreen.tsx  importWizard.tsx  initScreen.tsx  insertBookmarkForm.tsx  shortcutsListDialog.tsx  tagsInput.tsx  themeModeToggle.tsx  themeProvider.tsx
src/components/config/: appearanceConfig.tsx  dbConfig.tsx  index.tsx  parserConfig.tsx  parserForm.tsx
src/components/ui/: addBookmark.tsx  autoCompleteInput.tsx  button.tsx  copyButton.tsx  drawerDialog.tsx  mainListItem.tsx  mobileSearchBar.tsx  sidebar.tsx  table.tsx
src/components/ui/bookmarksTable/: columns.tsx  dataTable.tsx  tablePagination.tsx
src/lib/: hooks.ts  iDbPersister.ts  queries.ts  utils.ts
src/routes/: __root.tsx  index.tsx  main.tsx
src/routes/main/: about.tsx  bookmarks.tsx  config.tsx  index.tsx
