[package]
name = "PcPocket"
version = "2.0.0-beta"
description = "Cross platform, lightning fast and offline-first bookmarks manager"
authors = ["Rudraksh Tyagi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pcpocket_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
diesel = { version = "2.2.8", features = ["r2d2", "time", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
time = "0.3.41"
config = "0.15.11"
notify-rust = "4.11.7"
notify = "8.0.0"
notify-debouncer-full = "0.5.0"
log = "0.4.27"
log4rs = { version="1.3.0", features= ["console_appender", "rolling_file_appender", "compound_policy", "delete_roller", "size_trigger", "pattern_encoder", "threshold_filter"] } 
url = { version= "2.5.4", features = ["serde"] }
pyo3 = { version = "0.24.2", features = ["auto-initialize"] }
ctrlc = "3.4.6"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(target_os = "windows")'.dependencies]
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
